[gd_scene load_steps=57 format=2]

[ext_resource path="res://Sprites/Messenger/AllyUnitler&MessengerAllAnim/KirmiziUnitBayrakliWalk.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Messenger/AllyUnitler&MessengerAllAnim/KirmiziUnitBayrakliIdle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Messenger/AllyUnitler&MessengerAllAnim/KirmiziUnitOkcuWalk.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Messenger/AllyUnitler&MessengerAllAnim/KirmiziUnitOkcuIdle.png" type="Texture" id=4]
[ext_resource path="res://Scripts/RedTroops.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Messenger/AllyUnitler&MessengerAllAnim/KirmiziUnitOkcuAttack.png" type="Texture" id=6]
[ext_resource path="res://SFX/unit2_death.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/RedArmySound.ogg" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 13, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 39, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 65, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 13, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 39, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 13, 23 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 91, 0, 13, 23 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 84, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 98, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 126, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 140, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 154, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 168, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 182, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 196, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 210, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 14, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 28, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 56, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 70, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 84, 0, 14, 15 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 98, 0, 14, 15 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 15.2411, 6.45848 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 15.5354, 4.77563 )

[node name="RedTroops" type="KinematicBody2D" groups=[
"ally",
]]
script = ExtResource( 5 )

[node name="FlagCarrier" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "Idle"
frame = 7

[node name="Crossbowman" type="AnimatedSprite" parent="."]
position = Vector2( -11.8672, 3.96984 )
frames = SubResource( 46 )
animation = "Walk"

[node name="Crossbowman2" type="AnimatedSprite" parent="."]
position = Vector2( -23.6452, 3.96984 )
frames = SubResource( 46 )
animation = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14.315, 3.542 )
shape = SubResource( 47 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Unit",
]]
collision_layer = 33088
collision_mask = 32770

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -13.3259, 3.47428 )
shape = SubResource( 48 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="UnitDied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="March" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -6.753
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered" flags=3]
